# unqlite.rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Changelog.md  LICENSE-MIT  README.md  aliases.js  build.rs  clippy.toml  index.html  rustfmt.toml  search-index.js
examples/: temp.rs
implementors/unqlite/: trait.Transaction.js
src/: config.rs  error.rs  kv_cursor.rs  kv_store.rs  lib.rs  mod.rs  mode.rs  openmode.rs  transaction.rs  util.rs  vars.rs
src/document/: doc_store.rs  mod.rs  tests.rs  vm_value.rs
src/engine/: config.rs  mod.rs  openmode.rs  transaction.rs  util.rs
src/ffi/: bindgen.rs  mod.rs
src/unqlite/: config.rs.html  error.rs.html  ffi.rs.html  kv_cursor.rs.html  kv_store.rs.html  lib.rs.html  openmode.rs.html  transaction.rs.html  util.rs.html  vars.rs.html
unqlite/: Config.t.html  KV.t.html  UnQLite.t.html  Util.t.html  all.html  enum.Direction.html  enum.Error.html  fn.load_mmaped_file.html  index.html  sidebar-items.js  struct.Entry.html  struct.Mmap.html  struct.UnQLite.html  trait.Config.html  trait.Cursor.html  trait.KV.html  trait.Transaction.html  trait.Util.html  type.Result.html
unqlite-sys/: Cargo.toml  LICENSE  README.md  build.rs
unqlite-sys/src/: constants.rs  lib.rs
unqlite/config/: trait.Config.html
unqlite/document/: Jx9.t.html  UnQLiteVm.t.html  enum.Value.html  index.html  sidebar-items.js  struct.UnQLiteVm.html  trait.Jx9.html  type.Map.html
unqlite/error/: enum.Error.html  type.Result.html
unqlite/ffi/: ProcConsumer.t.html  ProcMemError.t.html  SyMemMethods.t.html  SyMutex.t.html  SyMutexMethods.t.html  SyString.t.html  Sytm.t.html  fn.unqlite_array_add_elem.html  fn.unqlite_array_add_strkey_elem.html  fn.unqlite_array_count.html  fn.unqlite_array_fetch.html  fn.unqlite_array_walk.html  fn.unqlite_begin.html  fn.unqlite_close.html  fn.unqlite_commit.html  fn.unqlite_compile.html  fn.unqlite_compile_file.html  fn.unqlite_config.html  fn.unqlite_context_alloc_chunk.html  fn.unqlite_context_free_chunk.html  fn.unqlite_context_new_array.html  fn.unqlite_context_new_scalar.html  fn.unqlite_context_output.html  fn.unqlite_context_output_format.html  fn.unqlite_context_peek_aux_data.html  fn.unqlite_context_push_aux_data.html  fn.unqlite_context_random_num.html  fn.unqlite_context_random_string.html  fn.unqlite_context_realloc_chunk.html  fn.unqlite_context_release_value.html  fn.unqlite_context_result_buf_length.html  fn.unqlite_context_throw_error.html  fn.unqlite_context_throw_error_format.html  fn.unqlite_context_user_data.html  fn.unqlite_create_constant.html  fn.unqlite_create_function.html  fn.unqlite_delete_constant.html  fn.unqlite_delete_function.html  (+258 more)
(+269 files in other folders)
